# rDSN.Python

./: CMakeLists.txt  LICENSE  README.md  build.cmd  build.sh
release/linux/: MonitorPack.7z
src/: README.md  pip_install_for_windows.py  setup.py
src/apps/: EchoAppExample.py  EchoClient.py  EchoCodeDefinition.py  EchoMain.py  EchoServer.py  config.ini
src/apps/app_package/: EchoAppExample.py  EchoClient.py  EchoServer.py
src/apps/echo/: EchoMain.py  config.ini
src/apps/echo/app_package/: EchoAppExample.py  EchoClient.py  EchoCodeDefinition.py
src/apps/rDSN.monitor/: README.md  config.ini  rDSN.Monitor.py  requirement.txt  server.py
src/apps/rDSN.monitor/app_package/: MonitorApp.py  MonitorAppExample.py  MonitorCodeDefinition.py
src/apps/rDSN.monitor/app_package/pic/: Drawing1.vsd
src/apps/rDSN.monitor/static/view/: head.html  js.html  main.html  perValue1.html  perValue2.html  perValue3.html  related.html  sankey_d3.html  table.html  template.html
src/dev/: CMakeLists.txt  InterOpLookupTable.py  RpcStream.py  ServiceApp.py  Utils.py
src/dev/python/: Clientlet.py  InterOpLookupTable.py  NativeCall.py  Serverlet.py  ServiceApp.py  Utils.py
src/dev/python_helper/: CMakeLists.txt  python_helper.cpp
src/python_helper/: README.md  python_helper.cpp
src/rDSN.monitor/: README.md  config.ini  server.py
src/rDSN.monitor/app_package/: EchoCodeDefinition.py  EchoServer.py
src/rDSN.monitor/public/: log.1.txt  log.2.txt  log.3.txt
src/rDSN.monitor/static/: analyse_template.html  dep_template.html  index_template.html  listDir_template.html  perf_template.html  sample data.txt  upload_template.html  uploadsuc_template.html
src/rDSN.monitor/static/css/: bootstrap.css  docs.min.css
src/rDSN.monitor/static/js/: bootstrap.js  bootstrap.min.js
src/rDSN.monitor/static/php/: upload.php
(+42 files in other folders)
